--- a/src/hotelcasestudy/ADMIN_EmployeeManagement.form
+++ b/src/hotelcasestudy/ADMIN_EmployeeManagement.form
@@ -50,7 +50,7 @@
               </Group>
               <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="724" max="-2" attributes="0"/>
-              <EmptySpace pref="45" max="32767" attributes="0"/>
+              <EmptySpace pref="53" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -109,10 +109,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
-                <Column editable="true" title="EMPLOYEE NAME" type="java.lang.Object"/>
-                <Column editable="true" title="EMPLOYEE ID" type="java.lang.Object"/>
+                <Column editable="true" title="ADMIN ID" type="java.lang.Object"/>
+                <Column editable="true" title="PASSWORD" type="java.lang.Object"/>
                 <Column editable="true" title="EMAIL" type="java.lang.Object"/>
-                <Column editable="true" title="OCCUPATION" type="java.lang.Object"/>
+                <Column editable="true" title="CREATED ON" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -156,7 +156,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="48" green="61" red="86" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Employee ID"/>
+        <Property name="text" type="java.lang.String" value="Password"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
@@ -178,7 +178,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="48" green="61" red="86" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Employee Name"/>
+        <Property name="text" type="java.lang.String" value="Admin ID"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
@@ -189,7 +189,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="48" green="61" red="86" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Occupation"/>
+        <Property name="text" type="java.lang.String" value="Created On"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="BT0">
